<resources>
    <string name="app_name">AMazeByRuoyu</string>
    <string name="cur_lvl">Current level: 0/15</string>
    <string name="new_maze">NEW MAZE</string>
    <string name="load_maze">LOAD MAZE</string>
    <string name="generation_maze">Choose a generation algorithm</string>
    <string name="maze_activity">AMazeActivity</string>
    <string name="gen_activity">GeneratingActivity</string>
    <string name="ani_activity">PlayAnimationActivity</string>
    <string name="man_activity">PlayManualActivity</string>
    <string name="win_activity">WinningActivity</string>
    <string name="los_activity">LosingActivity</string>
    <string name="catch_me">Can U Catch Me?!</string>
    <string name="game_rule">Catch the Murderer by getting out of the maze!</string>
    <string name="murder_progress">Murder is gonna happening......</string>
    <string name="back">Back</string>
    <string name="loading">Loading: 0%</string>
    <string name="map">MAP</string>
    <string name="map_on">MAP: On</string>
    <string name="map_off">MAP: Off</string>
    <string name="solution">Clue</string>
    <string name="clue_on">Clue: On</string>
    <string name="clue_off">Clue: Off</string>
    <string name="show_wall">Walls</string>
    <string name="wall_on">Walls: On</string>
    <string name="wall_off">Walls: Off</string>
    <string name="up">Move Up</string>
    <string name="left">Move Left</string>
    <string name="right">Move Right</string>
    <string name="Go2win">Go2Winning</string>
    <string name="Go2lose">Go2Losing</string>
    <string name="size_up">size up</string>
    <string name="size_down">size down</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="winning0">Congratulations!</string>
    <string name="winning1">You Successfully Catch the Murderer!</string>
    <string name="instruction">Click Button "BACK" to restart the game.</string>
    <string name="shortest_path">The Possible Shortest Path: 0</string>
    <string name="user_path">You use 0 steps to win.</string>
    <string name="energy">Energy Consumption: 0</string>
    <string name="battery">ENERGY: 3000</string>
    <string name="losing0">News!!!</string>
    <string name="losing1">Murderer escaped!!!</string>
    <string name="east">E</string>
</resources>
