<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".gui.PlayManuallyActivity">

    <Button
        android:id="@+id/go2win"
        android:layout_width="290dp"
        android:layout_height="309dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="toWin"
        android:text="@string/Go2win" />

    <ImageButton
        android:id="@+id/upbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go2win"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/up"
        android:onClick="moveUp"
        app:srcCompat="@drawable/up_arrow" />

    <ImageButton
        android:id="@+id/leftbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upbutton"
        android:layout_toStartOf="@+id/upbutton"
        android:contentDescription="@string/left"
        android:onClick="moveLeft"
        app:srcCompat="@drawable/left_arrow" />

    <ImageButton
        android:id="@+id/rightbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upbutton"
        android:layout_toEndOf="@+id/upbutton"
        android:contentDescription="@string/right"
        android:onClick="moveRight"
        app:srcCompat="@drawable/right_arrow" />

    <ToggleButton
        android:id="@+id/cluebuttonM"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="251dp"
        android:layout_marginTop="0dp"
        android:text="@string/wall_off"
        android:textOff="@string/wall_off"
        android:textOn="@string/wall_on" />

    <ToggleButton
        android:id="@+id/mapbuttonM"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cluebuttonM"
        android:layout_centerHorizontal="true"
        android:text="@string/map_off"
        android:textOff="@string/map_off"
        android:textOn="@string/map_on" />

    <ToggleButton
        android:id="@+id/wallbuttonM"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go2win"
        android:layout_alignTop="@+id/cluebuttonM"
        android:text="@string/wall_off"
        android:textOff="@string/wall_off"
        android:textOn="@string/wall_on" />

    <ImageButton
        android:id="@+id/size_up_map"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/size_up"
        android:onClick="sizeUp"
        app:srcCompat="@drawable/inre_map" />

    <ImageButton
        android:id="@+id/size_down_map"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="145dp"
        android:contentDescription="@string/size_down"
        android:onClick="sizeDown"
        app:srcCompat="@drawable/dre_map" />

    <Button
        android:id="@+id/backM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="backButtonClicked"
        android:text="@string/back" />

</RelativeLayout>