<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".gui.PlayAnimationActivity">

    <Button
        android:id="@+id/go2win"
        android:layout_width="290dp"
        android:layout_height="309dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Go2win" />

    <ImageButton
        android:id="@+id/size_up_map"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/size_up"
        app:srcCompat="@drawable/inre_map" />

    <ImageButton
        android:id="@+id/size_down_map"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="145dp"
        android:contentDescription="@string/size_down"
        app:srcCompat="@drawable/dre_map" />

    <ToggleButton
        android:id="@+id/cluebuttonP"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="251dp"
        android:layout_marginTop="0dp"
        android:text="@string/wall_off"
        android:textOff="@string/wall_off"
        android:textOn="@string/wall_on" />

    <ToggleButton
        android:id="@+id/mapbuttonP"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cluebuttonP"
        android:layout_centerHorizontal="true"
        android:text="@string/map_off"
        android:textOff="@string/map_off"
        android:textOn="@string/map_on" />

    <ToggleButton
        android:id="@+id/wallbuttonP"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go2win"
        android:layout_alignTop="@+id/cluebuttonP"
        android:text="@string/wall_off"
        android:textOff="@string/wall_off"
        android:textOn="@string/wall_on" />

    <Button
        android:id="@+id/go2lose"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go2win"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="22dp"
        android:textColor="@android:color/black"
        android:text="@string/Go2lose" />

    <Button
        android:id="@+id/backP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/back" />

</RelativeLayout>