<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/losing_screen"
    tools:context=".gui.LosingActivity">

    <TextView
        android:id="@+id/losing0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/losing0"
        android:textColor="#FF0000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/losing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:text="@string/losing1"
        android:textColor="#FF0000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/losing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/shortest_path"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/losing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/user_path"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/losing4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/losing3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="@string/energy"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/losing5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/losing2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-38dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:text="@string/instruction"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/losing1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="49dp"
        android:onClick="backButtonClicked"
        android:text="@string/back" />

    <ImageButton
        android:id="@+id/voiceLos"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:onClick="voiceButton"
        app:srcCompat="@drawable/voiceon" />
</RelativeLayout>