<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/load_screen"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".gui.GeneratingActivity">

    <TextView
        android:id="@+id/catch_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="29dp"
        android:text="@string/catch_me"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:max="100"
        android:progressBackgroundTint="@android:color/holo_blue_dark"
        android:progressDrawable="@drawable/custom_progressbar"
        android:progressTint="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/game_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="242dp"
        android:gravity="center"
        android:text="@string/game_rule"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/murder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:text="@string/murder_progress"
        android:textColor="@android:color/white"
        android:textSize="17sp" />
</RelativeLayout>